--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,7 @@
       itemprop="description"
       content="Self Developed personal website build with React.js"
     />
-    <meta
-      itemprop="image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
-    />
+    <meta itemprop="image" content="./portfolio.png" />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://soumyajit.vercel.app" />
@@ -35,10 +32,7 @@
       property="og:description"
       content="Self Developed personal website build with React.js"
     />
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
-    />
+    <meta property="og:image" content="./portfolio.png" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -47,10 +41,7 @@
       name="twitter:description"
       content="Self Developed personal website build with React.js"
     />
-    <meta
-      name="twitter:image"
-      content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK"
-    />
+    <meta name="twitter:image" content="./portfolio.png" />
   </head>
 
   <body>
