--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Zahir | Portfolio</title>
+    <title>Zaher | Portfolio</title>
     <meta
       name="description"
       content="Self Developed personal website build with React.js"
     />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Zahir | Portfolio" />
+    <meta itemprop="name" content="Zaher | Portfolio" />
     <meta
       itemprop="description"
       content="Self Developed personal website build with React.js"
@@ -27,7 +27,7 @@
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://soumyajit.vercel.app" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Zahir | Portfolio" />
+    <meta property="og:title" content="Zaher | Portfolio" />
     <meta
       property="og:description"
       content="Self Developed personal website build with React.js"
@@ -36,7 +36,7 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Zahir | Portfolio" />
+    <meta name="twitter:title" content="Zaher | Portfolio" />
     <meta
       name="twitter:description"
       content="Self Developed personal website build with React.js"
